--- a/assets/json/en/reassure.json
+++ b/assets/json/en/reassure.json
@@ -37,5 +37,6 @@
     "You are amazing. You are important. You are special. You are unique. You are kind. You are precious. You are loved.",
     "Life is ten percent what you experience and ninety percent how you respond to it.",
     "Smile, breathe, and go slowly.",
-    "Everything will turn out okay in the end"
+  "Everything will turn out okay in the end",
+  "It's OK, you got this"
 ]
